Bug 110404 - Iris fails piglit.spec.ext_transform_feedback.immediate-reuse test
Summary: Iris fails piglit.spec.ext_transform_feedback.immediate-reuse test
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/Iris (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Intel 3D Bugs Mailing List
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-11 14:02 UTC by asimiklit
Modified: 2019-05-02 09:05 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description asimiklit 2019-04-11 14:02:53 UTC
I found that the OpenGL saying:
OpenGL spec:
   "5.3.3 Rules
    .......
    Note: “Updates” via rendering or transform feedback
    are treated consistently with updates via GL commands.
    Once EndTransformFeedback has been issued, any subsequent
    command in the same context that uses the results of the
    transform feedback operation will see the results."

i965 makes the several cache invalidations (VF, L3, ...)
in EndTransformFeedback function to make the streamout result visible for others
but unfortunately Iris doesn't do it.
I will provide a solution for this issue shortly.
Comment 1 asimiklit 2019-04-11 14:32:40 UTC
Suggested solution:
https://gitlab.freedesktop.org/mesa/mesa/merge_requests/635
Comment 2 Sergii Romantsov 2019-05-02 09:05:36 UTC
Should be fixed:
commit 4e9592c5fa249df11d9aab665f49f26f3d428d77
Author: Andrii Simiklit <andrii.simiklit@globallogic.com>
Date:   Thu Apr 25 11:19:46 2019 +0300

    iris: make the TFB result visible to others


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.